# yolov8

./: README.md  cowface.yaml  infer.py  infer_batch.py  predict.py  pt2onnx.py  pyproject.toml  sort.py  track.py  trt.py
